Fix overflow on filename

--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -25,6 +25,8 @@
         li {
             .file {
                 padding: 2px 0px;
+                text-overflow: ellipsis;
+                white-space: nowrap;
 
                 .caret {
                     display: inline-block;
